tests/fsharp/typecheck/sigs/neg27.bsl

neg27.fsi(3,6,3,15): parse error FS0547: A type definition requires one or more members or other declarations. If you intend to define an empty class, struct or interface, then use 'type ... = class end', 'interface end' or 'struct end'.

neg27.fs(3,6,3,14): parse error FS0547: A type definition requires one or more members or other declarations. If you intend to define an empty class, struct or interface, then use 'type ... = class end', 'interface end' or 'struct end'.
