tests/fsharp/typecheck/sigs/neg27.fs
module Test

type NonComp() = //class end

//[<StructuralEquality(true)>]
//[<StructuralComparison(true)>]
type MyAlg =


    | Foo of NonComp
